# vga_buffer_rs

./: Cargo.toml
src/: buffer.rs  cursor.rs  lib.rs  vga_buffer.rs
src/draw/: box_shape.rs  mod.rs
tests/: basic_buffer.rs  draw_target.rs
